# pyinverse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conda-environment.yaml  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat  requirements.txt  structure.dot
src/pyinverse/: __init__.py  forward_model.py  loss.py  pyinverse.py  solver.py  utils.py
tests/: test_forward_model.py  test_loss.py  test_pyinverse.py  test_solver.py  test_utils.py
