[tool.poetry]
name = "pyinverse"
version = "0.1.0"
description = "Solve various inverse problems!"
authors = ["Robert Maiwald"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
