[tool.poetry]
name = "pyinverse"
version = "0.1.0"
description = "Solve various inverse problems!"
authors = ["Robert Maiwald"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
myst-nb = {version = "^0.17.1", python = "^3.9"}
sphinx-autoapi = "^2.0.1"
sphinx-rtd-theme = "^1.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
